--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "DIKUArcade"]
 	path = DIKUArcade
-	url = git@github.com:diku-dk/DIKUArcade.git
+	url = https://github.com/diku-dk/DIKUArcade.git
 	branch = master
